# sysu_homework

./: airplane_game.pro
airplane-game/: .gitignore  CMakeLists.txt  README.md  bullet.cpp  bullet.h  enemy.cpp  enemy.h  game.cpp  game.h  gamewindow.cpp  gamewindow.h  main.cpp  player.cpp  player.h
plane_game/: plane_game.pro
project2/: project2.cpp  tire_tree.cpp
project2_v1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tire_tree.cpp  tire_tree.h
project4/: haffumantree.cpp  haffumantree.h  main.cpp
project4_v2/: CMakeLists.txt  haffumantree.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
project_v2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
